# NidhiFlow-AI

./: .gitignore  CLAUDE.md  README.md  storage.rules
backend/: CLAUDE.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 00cc34902232_add_document_validation_results_and_.py  0d4b63efbaca_create_customers_loan_applications_loan_.py  0f6993177c10_add_document_ocr_results_table.py  32b687acf29b_add_home_loan_enhancement_fields.py  405907ed2f44_add_business_loan_fields.py  473cd15a5e4b_add_firebase_uid_to_customers.py  6d199f6b527a_add_workflow_executions_and_workflow_.py  821b1bcc5d9e_add_personal_loan_fields.py  9a3e2f7c1d4b_add_node_executions_table.py  c6c1d74b7715_add_document_type_checklist_enum_values_.py  e4514c49f53b_fix_document_type_enum_labels_to_match_.py  f5c4e7fdf888_add_applicant_profile_fields.py
backend/app/agents/: __init__.py  graph.py  nodes.py  state.py
backend/app/api/: customers.py  dashboard.py  documents.py  health.py  loans.py  monitoring.py  reporting.py
backend/app/core/: config.py  database.py  document_checklist.py  firebase_app.py  firebase_auth.py
backend/app/models/: __init__.py  customer.py  document_ocr_result.py  document_validation_result.py  enums.py  loan_application.py  loan_document.py  loan_status_history.py  loan_validation_summary.py  node_execution.py  workflow_event.py  workflow_execution.py
backend/app/schemas/: __init__.py  customer.py  dashboard.py  loan_application.py  loan_document.py  (+2 more)
backend/tests/: test_decision_engine.py  test_reporting.py  test_telemetry.py
(+83 files in other folders)
